--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 <!--<canvas id="3dFrame"></canvas>-->
 <div id="WebGL"></div>
 <div id="Stats-output"></div>
-<ul id="label-position-list">
-    <li>
-        <span class="name">name</span>
-        <span class="position">x: 100000</span>
-        <span class="position">y: 100000</span>
-        <span class="position">z: 100000</span>
-    </li>
-    <li>
-        <span class="name">name</span>
-        <span class="position">x: 100</span>
-        <span class="position">y: 1000</span>
-        <span class="position">z: 100000</span>
-    </li>
-</ul>
+<div id="controllerBorad" class="clearfix">
+    <ul id="label-position-list"></ul>
+</div>
+<div class="button-list">
+    <div id="reset-camera" class="btn">reset camera</div>
+    <div class="row">
+        <div id="camera-xy" class="btn col-md-4">xy面</div>
+        <div id="camera-yz" class="btn col-md-4">yz面</div>
+        <div id="camera-xz" class="btn col-md-4">xz面</div>
+    </div>
+
+</div>
+
 <script>window.nodeRequire = require;
 delete window.require;
 delete window.exports;
@@ -38,6 +37,8 @@ delete window.module;</script>
 <script src="plugins/TrackballControls.js"></script>
 <script src="plugins/dat.gui.js"></script>
 <script src="plugins/stats.js"></script>
+<script src="js/render.js"></script>
+<script src="js/conrtrolBox.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
