feat: add localize control function

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ delete window.module;</script>
 <script src="plugins/stats.js"></script>
 <script src="js/render.js"></script>
 <script src="js/conrtrolBox.js"></script>
+<script src="js/localizer.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
